[package]
name = "rvpacker-txt-rs-lib"
version = "13.0.1"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2024"
rust-version = "1.87.0"
description = "Library that allows you to generate text files from RPG Maker files."
documentation = "https://docs.rs/rvpacker-txt-rs-lib"
readme = "README.md"
repository = "https://github.com/savannstm/rvpacker-txt-rs-lib"
license-file = "LICENSE.md"

[dependencies]
bitflags = { version = "2.13.0", features = ["serde"] }
const_format = "0.2.36"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
gxhash = { version = "3.5.0", features = ["deterministic"] }
indexmap = "2.14.0"
log = "0.4.33"
marshal-rs = "2.0.1"
num_enum = "0.7.6"
phf = { version = "0.14.0", features = ["macros"] }
regex = "1.12.4"
serde = "1.0.228"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
smallvec = "1.15.2"
strum = { version = "0.28.0", features = ["strum_macros"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
